<resources>
    <string name="app_name">Minesweeper</string>
    <string name="new_game">New Game</string>
    <string name="verify_result">Verify</string>
    <string name="cheat">Cheat</string>
    <string name="difficulty_level_size">Difficulty level by size</string>
    <string name="difficulty_level_number">Difficulty level by Mine number</string>
    <string name="mine_number_too_big">Mines number is too big!</string>
    <string name="game_success">Congratulations! You swept all the mines!</string>
    <string name="game_reveal_fail">Oh sorry, validate fails!</string>
    <string name="game_fail">Oh sorry, you failed the game!</string>
    <string name="mark_more">Please mark all mines around!</string>
    <string name="banner_ad_unit_id">ca-app-pub-7735762127079903/4572246673</string>

    <string-array name="difficulty_level_size">
        <item>8</item>
        <item>12</item>
        <item>16</item>
    </string-array>
    <string-array name="difficulty_level_mine">
        <item>10</item>
        <item>23</item>
        <item>40</item>
    </string-array>
</resources>
