<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="8dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.smartpiggy.minesweeper.minesweeper.MainActivity">
    <LinearLayout
        android:id="@+id/boardId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />
    <LinearLayout
        android:layout_marginTop="@dimen/linearLayoutMargin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button android:id="@+id/newGameId"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_height="@dimen/button_height"
            android:text="@string/new_game"/>
        <Button android:id="@+id/validateId"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:drawableLeft="@mipmap/smile"
            android:layout_height="@dimen/button_height"
            android:text="@string/verify_result"/>
        <Button android:id="@+id/cheateId"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:layout_height="@dimen/button_height"
            android:text="@string/cheat"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_level_size"
            android:textColor="@color/colorPrimaryDark" />
        <Spinner
            android:id="@+id/spinnerSizeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_level_number"
            android:textColor="@color/colorPrimaryDark" />
        <Spinner
            android:id="@+id/spinnerMineId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</LinearLayout>


